Introduce unseen markers for critical and complete tiers in priorities.toml and update tab function in router.py to utilize these markers for improved notification handling.

--- a/priorities.toml
+++ b/priorities.toml
@@ -30,6 +30,7 @@ idle       = "✓"
 [critical]
 sound   = "error.wav"
 symbol  = "⚠"
+unseen_marker = "🟡"
 patterns = [
     'should I ',
     'do you (want|prefer|need)',
@@ -47,6 +48,7 @@ patterns = [
 [complete]
 sound   = "task_complete.wav"
 symbol  = "✓"
+unseen_marker = "🟢"
 patterns = [
     "I've (created|updated|written|built|implemented|added|fixed)",
     'successfully',
